# ned_pkg

./: .gitignore  README.md  file_dialog.py  logging_config.py  ned_pkg.toml  pyproject.toml
src/: iter_dir.py  logging_config.py  read_csv.py
tests/: sample_csv.csv  test_file_dialog.py  test_read_csv.py
